# world-models

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  docker_run.sh
docs/: EXPERIMENT_CONTRACTS.md  RESEARCH_WORKFLOW.md  ROADMAP.md
experiments/groot_h_tum_sonata/: 01_build_image.sh  02_download_weights.py  03_run_inference.sh  04_prep_stats.sh  05_finetune.sh  06_upload_to_hf.py  07_demo_video.py  08_run_demo.sh  09_eval.py  10_run_eval.sh  11_merge_eval.py  12_robot_rollout.py  13_run_robot_rollout.sh  14_rollout_cache.py  15_demo_compose.py  16_run_unified_demo.sh  MODEL_CARD.md  render_architecture.py  requirements-sim.txt
patches/groot_h/: 001-allow-unexpected-dropout-prob-key.patch
tests/: STATUS.md
tests/smoke/: groot_h.sh  vjepa2.sh
